<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/portText"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@+id/ipText"
        android:text="Server IP"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/portText"
        android:layout_alignBottom="@+id/portText"
        android:layout_alignLeft="@+id/textView2"
        android:text="Server PORT"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="16dp"
        android:onClick="saveDetails"
        android:text="@string/save_details" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="27dp"
        android:text="@string/exit_details" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/saveButton"
        android:ems="10"
        android:hint="@string/ip_input_tp" />

    <Button
        android:id="@+id/onButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/portText"
        android:layout_marginTop="27dp"
        android:onClick="buttonOn"
        android:text="@string/on_string" />

    <Button
        android:id="@+id/offButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/onButton"
        android:layout_alignBottom="@+id/onButton"
        android:layout_alignRight="@+id/textView1"
        android:onClick="buttonOff"
        android:text="@string/off_string" />

    <EditText
        android:id="@+id/portText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipText"
        android:layout_below="@+id/ipText"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/port_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</RelativeLayout>